[package]
name = "libp2p-bitswap"
version = "0.25.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["prost", "prost-build"]

[build-dependencies]
prost-build = { version = "0.11", optional = true }

[dependencies]
async-trait = "0.1.52"
fnv = "1.0.7"
